1. 新增了新的社交媒体Gitee 2. 首页打字效果修改为多行切换,需将个人说明以;分割 3. 彩条可以在主题设置中关闭 4. 文章页顶部背景图现在可以根据随机图API显示背景 5. 修复邮箱地址跳转bug 6. 修复目录页无法跳转的问题 7. markdown样式>语法默认样式修改 8. 新增了公安备案信息的显示 9. 新增搜索功能 10. 将日志页修改为动态页，实现点赞功能 11. 修改了h1-h6的默认样式，新增了表格样式 12. 新增友链展示方式，优化友链样式 13. 实现所有页面评论功能

--- a/settings.yaml
+++ b/settings.yaml
@@ -58,6 +58,18 @@ theme:
           label: 是
         - value: false
           label: 否
+    enable_background_strip:
+      name: enable_background_strip
+      label: 启用全局背景彩条
+      type: switch
+      data-type: bool
+      default: true
+      description: "关闭所有页面背景上的动态彩条"
+      options:
+        - value: true
+          label: 是
+        - value: false
+          label: 否
     body_background:
       name: body_background
       label: body背景图可选（url/颜色值）
@@ -387,6 +399,18 @@ links:
       default: "友情链接"
       placeholder: "请输入"
       description: "修改友链页顶部展示的标题"
+    links_type:
+      name: links_type
+      label: 友链展示方式
+      type: select
+      data-type: text
+      default: list
+      description: "配置友链的展示方式，默认按列表顺序展示，可在后台管理中配置排序值（分组暂不支持排序）"
+      options:
+        - value: list
+          label: 列表
+        - value: group
+          label: 分组
     enable_top_links_background_img:
       name: enable_top_links_background_img
       label: 开启顶部背景图
@@ -457,6 +481,109 @@ journals:
           label: 是
         - value: false
           label: 否
+    journals_comment:
+      name: journals_comment
+      label: 评论功能
+      type: switch
+      data-type: bool
+      default: true
+      placeholder: "开启自定义页评论功能"
+      options:
+        - value: true
+          label: 是
+        - value: false
+          label: 否
+
+comment:
+  label: 评论框
+  items:
+    gravatar_source:
+      name: gravatar_source
+      label: 评论头像源
+      type: text
+      default: "https://gravatar.orangejx.cn/avatar"
+      placeholder: 请输入源地址，末尾不需要斜杠
+      description: "用于修改全站评论的头像源地址（优先取主题中配置的源，取不到时才从后台管理中取），默认为 https://gravatar.orangejx.cn/avatar（若头像显示不出来，请自行更换源）。关于头像类型，可以到 “后台管理-系统-博客设置-评论设置” 中配置"
+    enable_comment_autoload:
+      name: enable_comment_autoload
+      label: 自动加载评论
+      type: switch
+      data-type: bool
+      default: true
+      description: "是否自动加载评论数据，分页大小可在 “后台管理-系统-博客设置-评论设置-每页显示条数” 中统一配置"
+      options:
+        - value: true
+          label: 开启
+        - value: false
+          label: 关闭
+    enable_comment_ua:
+      name: enable_comment_ua
+      label: 展示评论者UA信息
+      type: switch
+      data-type: bool
+      default: false
+      description: "用来控制全局评论组件中是否展示评论者的UA信息（浏览器、操作系统等）"
+      options:
+        - value: true
+          label: 开启
+        - value: false
+          label: 关闭
+    comment_loading_style:
+      name: comment_loading_style
+      label: 评论加载样式
+      type: radio
+      data-type: text
+      default: default
+      description: "选择加载评论时的样式"
+      options:
+        - value: default
+          label: 默认
+        - value: circle
+          label: 圆圈
+        - value: balls
+          label: 小球
+    comment_aword:
+      name: comment_aword
+      label: "评论框内的一言"
+      type: text
+      default: "你是我一生只会遇见一次的惊喜 ..."
+      placeholder: 请输入
+      description: "输入内容时展示的的一言内容"
+    comment_author_poptext:
+      name: comment_author_poptext
+      label: "提示文案（输入昵称时）"
+      type: text
+      default: "你的昵称是啥呢？"
+      placeholder: 请输入
+      description: "填写昵称时的提示文字"
+    comment_email_poptext:
+      name: comment_email_poptext
+      label: "提示文案（输入邮箱时）"
+      type: text
+      default: "你将收到回复通知"
+      placeholder: 请输入
+      description: "填写邮箱时的提示文字"
+    comment_avatar_error:
+      name: comment_avatar_error
+      label: 缺省头像
+      type: text
+      placeholder: 请输入
+      default: "/themes/butterfly/source/img/error_avatar.jpg"
+      description: "当评论头像加载不出来时展示的默认头像"
+    comment_avatar_loading:
+      name: comment_avatar_loading
+      label: 头像加载图
+      type: text
+      placeholder: 请输入
+      default: "/themes/butterfly/source/img/loading.gif"
+      description: "头像加载时展示的loading图片"
+    comment_empty_text:
+      name: comment_empty_text
+      label: 无评论时的文案
+      type: text
+      default: "暂无评论"
+      placeholder: 请输入
+      description: "没有评论数据时显示的文字"
 
 sheet:
   label: 自定义
@@ -479,6 +606,18 @@ sheet:
       type: attachment
       default: "https://gitee.com/dhjdd/Timo/raw/master/1642841299688.png"
       placeholder: "顶部背景图"
+    sheet_comment:
+      name: sheet_comment
+      label: 评论功能
+      type: switch
+      data-type: bool
+      default: true
+      placeholder: "开启自定义页评论功能"
+      options:
+        - value: true
+          label: 是
+        - value: false
+          label: 否
 
 code_block:
   label: 代码块
@@ -635,6 +774,18 @@ post:
           label: 是
         - value: false
           label: 否
+    enable_top_random_img:
+      name: enable_top_random_img
+      label: 开启顶部背景图随机图API
+      type: switch
+      data-type: bool
+      default: true
+      placeholder: "开启顶部背景图随机图API"
+      options:
+        - value: true
+          label: 是
+        - value: false
+          label: 否
     #    enable_aside_expander:
     #      name: enable_aside_expander
     #      label: 展示侧边栏切换按钮
@@ -670,6 +821,18 @@ post:
       type: attachment
       default: ""
       placeholder: "打赏用的微信收款二维码链接，不填不显示"
+    post_comment:
+      name: post_comment
+      label: 评论功能
+      type: switch
+      data-type: bool
+      default: true
+      placeholder: "开启自定义页评论功能"
+      options:
+        - value: true
+          label: 是
+        - value: false
+          label: 否
 
 social:
   label: 社交
@@ -686,6 +849,12 @@ social:
       type: text
       default: ""
       placeholder: "github主页地址"
+    gitee:
+      name: gitee
+      label: Gitee
+      type: text
+      default: ""
+      placeholder: "gitee主页地址"
     zhihu:
       name: zhihu
       label: 知乎
