修复gulp编译时报错

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "小红",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
@@ -13,7 +14,8 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
